# polarimeterstudies

./: .gitignore  CMakeLists.txt  DCElasticFileWriter.cc  README.md  main.cc
include/: .#FileReader.hh  Analysis.hh  AnalysisLinkDef.hh  AnalysisMessenger.hh  BeamGenerator.hh  CaloSensitiveDetector.hh  CathodeHit.hh  CathodeSD.hh  Classes.hh  ClusterSetup.hh  Colors.hh  CopyNoReader.hh  CopyNoWriter.hh  CosmicMuonGenerator.hh  CosmicSetup.hh  DCBreakupEventGenerator.hh  DCElasticEventGenerator.hh  DCElasticTimeDependentGenerator.hh  DCInelasticEventGenerator.hh  DetId.hh  DetectorConstruction.hh  DetectorConstructionFactory.hh  DetectorHit.hh  DetectorMessenger.hh  DeuteronCarbonBreakupModel.hh  DeuteronCarbonElasticScatteringModel.hh  DeuteronCarbonInelasticScatteringModel.hh  DummySD.hh  E21.hh  E22.hh  E22EventGenerator.hh  E22Target.hh  EddaDetectorConstruction.hh  EventAction.hh  EventGenerator.hh  ExternalBeampipe.hh  FileReader.hh  FileWriterPrimaryGeneratorAction.hh  G4Exception.hh  GDMLReader.hh  (+73 more)
scripts/: #de-dx.sh#  40_Fe_Plastic-singlerun.mac  40_Fe_Plastic.mac  AnalysisBase.py  CalculateLateral.py  CalculateRange.py  CalculateThickness.py  RangeStudies.mac  Sandwich-Effective-Energy.sh  SandwichEffectiveEnergy.mac  SandwichEffectiveEnergy.sh  T1.mac  TestBeam2016BEffectiveSize.mac  TestBeam2016BEffectiveSize.py  TestBeam2016BFOM.sh  TestBeam2016BMaterialInfluence.mac  TestBeam2016BMaterialInfluence.py  TestBeamEffectiveEnergy.mac  TestBeamEffectiveEnergy.sh  TungstenAbsorber.mac  analyse-absorber.py  analyse-bragg.py  analyse-de-dx.py  analyse-homogenity.py  analyse-optimize-absorber.py  analyse.py  analysis-example.py  bragg-all.mac  bragg-alu.mac  bragg-iron.mac  bragg-lead.mac  bragg-lyso.mac  bragg-plastic.mac  bragg-singlerun.mac  bragg-tungsten.mac  bragg.mac  bragg.sh  calibration.py  checkForNeutron.py  classifyAbsorber.sh  (+55 more)
scripts/E22EnergyLossInTarget/: E22EnergyLossInTarget.mac  Material.mac  Thickness.mac~  run.mac
scripts/E22EnergyResolution/: 100-1.mac  100-10.mac  100-20.mac  100-5.mac  150-1.mac  150-10.mac  150-20.mac  150-5.mac  200-1.mac  200-10.mac  200-20.mac  200-5.mac  250-1.mac  250-10.mac  250-20.mac  250-5.mac  270-1.mac  270-10.mac  270-20.mac  270-5.mac  E22EnergyResolution.mac  Material.mac  Thickness.mac  run.mac
scripts/Sandwich-Effective-Energy/: Sandwich-Effective-Energy.sh
scripts/SandwichEffectiveEnergy/: SandwichEffectiveEnergy.mac  SandwichEffectiveEnergy.sh
scripts/TestBeam2016BEffectiveSize/: TestBeam2016BEffectiveSize-singlerun.mac  TestBeam2016BEffectiveSize.py  TestBeam2016BEffectiveSize.sh
scripts/TestBeam2016BEnergyCalibration/: TestBeam2016BEnergyCalibration.py  TestBeam2016BEnergyCalibration.sh  energy.mac  init.mac  material.mac
scripts/TestBeam2016BFOM/: TestBeam2016BFOM-singlerun.mac  TestBeam2016BFOM.mac
scripts/TestBeam2016BMaterialInfluence/: TestBeam2016BMaterialInfluence-singlerun.mac
scripts/TestBeamEffectiveEnergy/: TestBeamEffectiveEnergy.mac  TestBeamEffectiveEnergy.sh
scripts/Testbeam2016aEffectiveEnergy/: Testbeam2016aEffectiveEnergy.py
scripts/Testbeam2016bCalibration/: energy.mac  init.mac  run.mac
scripts/Testbeam2016bDeltaECalibration/: Testbeam2016bDeltaECalibration.py  Testbeam2016bDeltaECalibration.sh  energy.mac  init.mac  material.mac  run.mac
scripts/Testbeam2016bEffectiveSize/: energy.mac  init.mac  material.mac  run.mac
scripts/Testbeam2016bIsolation/: Testbeam2016bEnergyCalibration.sh  Testbeam2016bIsolation.py  Testbeam2016bIsolation.sh  energy.mac  init.mac  material.mac
scripts/bragg/: CalculateRange.py  bragg-all.mac  bragg-alu.mac  bragg-carbon.mac  bragg-iron.mac  bragg.mac  bragg.py  bragg.sh
scripts/classifyAbsorber/: classifyAbsorber.mac
scripts/de-dx/: de-dx-length.mac  de-dx.sh
scripts/efficiency/: efficiency-lyso-singlerun.mac  efficiency.sh
scripts/hodoscope-energy/: hodoscope-energy.mac  hodoscope-energy.py
scripts/optimizeAbsorber/: optimizeAbsorber.sh
scripts/scripts/: CalculateEdep.py  analyse-absorber.py  deltaE.py  gui.mac  test_dp.mac  test_gun.mac
scripts/scripts/E22EnergyLossInTarget/: E22EnergyLossInTarget.mac  Thickness.mac
scripts/scripts/E22EnergyResolution/: E22EnergyResolution.py  E22EnergyResolution.sh  Thickness.mac
scripts/scripts/bragg/: bragg-all.mac  bragg-carbon.mac  bragg.mac  bragg.sh
scripts/scripts/comparePhysList/: getHistos.py
scripts/scripts/de-dx/: de-dx.py
scripts/scripts/optimizeAbsorber/: optimizeAbsorber-singlerun.mac  optimizeAbsorber.mac
scripts/scripts/scripts/: AnalysisBase.py  analyse-smearing.py  analysis-cuts.py  test_elastic.mac  vis.mac  vis_T0.mac
scripts/scripts/scripts/E22EnergyLossInTarget/: run.mac
scripts/scripts/scripts/SandwichEffectiveEnergy/: SandwichEffectiveEnergy.py
scripts/scripts/scripts/TestBeam2016BEffectiveSize/: TestBeam2016BEffectiveSize.mac  TestBeam2016BEffectiveSize.sh
scripts/scripts/scripts/TestBeam2016BMaterialInfluence/: TestBeam2016BMaterialInfluence.sh
scripts/scripts/scripts/bragg/: CalculateLateral.py  analyse-bragg.py  bragg.mac
src/: Analysis.cc  AnalysisMessenger.cc  BeamGenerator.cc  CaloSensitiveDetector.cc  CathodeHit.cc  CathodeSD.cc  ClusterSetup.cc  CopyNoReader.cc  CopyNoWriter.cc  CosmicMuonGenerator.cc  CosmicSetup.cc  DCBreakupEventGenerator.cc  DCElasticEventGenerator.cc  DCElasticTimeDependentGenerator.cc  DCInelasticEventGenerator.cc  DetId.cc  DetectorConstruction.cc  DetectorConstructionFactory.cc  DetectorHit.cc  DetectorMessenger.cc  DeuteronCarbonBreakupModel.cc  DeuteronCarbonElasticScatteringModel.cc  DeuteronCarbonInelasticScatteringModel.cc  E21.cc  E22.cc  E22EventGenerator.cc  E22Target.cc  EddaDetectorConstruction.cc  EventAction.cc  EventGenerator.cc  ExternalBeampipe.cc  FileWriterPrimaryGeneratorAction.cc  G4Exception.cc  GDMLReader.cc  GenEventProducer.cc  InternalBeampipe.cc  JediBeamPipe.cc  JediBreakupModel.cc  JediBreakupProcess.cc  JediCalorimeterHit.cc  (+60 more)
utils/: dat2root.py
xml/: #quadrat.gdml#  CopyNoExtension.xsd  carbon.gdml  default.gdml  empty.gdml  hexagon.gdml  lyso.gdml  lysocal.gdml  quadrat.gdml
(+5 files in other folders)
